# pysnt

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  environment-dev.yml  environment-gui.yml  environment-min.yml  environment.yml  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-display.txt  requirements-gui.txt  requirements.txt  setup.py
.github/: dependabot.yml
dev/: README.md  create_module.py  placeholder_template.py
dev/scripts/: AUTOMATIC_MODULE_DISCOVERY.md  DOCSTRING_LINK_FIX.md  HIERARCHICAL_DOCS_CLEANUP.md  README.md  SPHINX_DOCSTRING_FIX.md  deploy.py  enhanced_api_docs_config.yaml  extract_class_signatures.py  generate_api_docs.py  generate_class_index.py  generate_constants_index.py  generate_stubs.py  java_reflection_extractor.py  pysnt_utils.py
dev/scripts/STUBS/: AllenCompartment.json  AllenUtils.json  Annotation3D.json  BiSearch.json  BiSearchNode.json  BoundingBox.json  ColorMaps.json  ConvexHull2D.json  ConvexHull3D.json  ConvexHullAnalyzer.json  CrossoverFinder.json  DefaultSearchNode.json  Fill.json  FillConverter.json  FillerThread.json  FlyCircuitLoader.json  Frangi.json  GroupedTreeStatistics.json  ImgUtils.json  ImpUtils.json  InsectBrainCompartment.json  InsectBrainLoader.json  InsectBrainUtils.json  InteractiveTracerCanvas.json  MouseLightLoader.json  MouseLightQuerier.json  MultiTreeColorMapper.json  MultiTreeStatistics.json  MultiViewer2D.json  MultiViewer3D.json  NeuroMorphoLoader.json  NodeColorMapper.json  NodeProfiler.json  NodeStatistics.json  PCAnalyzer.json  Path.json  PathAndFillManager.json  PathChangeListener.json  PathDownsampler.json  PathFitter.json  (+36 more)
dev/scripts/enhanced_api_docs/: __init__.py  __main__.py  cli.py  comprehensive_method_index.py  config.py  cross_reference_builder.py  docstring_enhancer.py  integration_manager.py  javadoc_extractor.py  javadoc_json_matcher.py  javadoc_parser.py  json_enhancer.py  json_stub_reader.py  json_writer.py  logging_setup.py  method_index_entry.py  method_index_generator.py  method_search_filter.py  orchestrator.py  rst_generator.py  rst_integration.py  rst_templates.py  sphinx_integration.py  sphinx_javadoc_extension.py  structured_integration.py  test_cross_references.py  validator.py
docs/: Makefile  api.md  conf.py  generate_api.py  index.md  install.md  limitations.md  overview.md  quickstart.md  requirements.txt
docs/_static/: custom.css  robots.txt  skeleton_timeseries.tif  theme-toggle.js
docs/_templates/: article-header-buttons.html  layout.html
docs/api_auto/: class_index.rst  constants_index.rst  index.rst  method_index.rst  modules.rst  pysnt.analysis.graph.rst  pysnt.analysis.growth.rst  pysnt.analysis.rst  pysnt.analysis.sholl.gui.rst  pysnt.analysis.sholl.math.rst  pysnt.analysis.sholl.parsers.rst  pysnt.analysis.sholl.rst  pysnt.annotation.rst  pysnt.common_module.rst  pysnt.config.rst  pysnt.converters.chart_converters.rst  pysnt.converters.core.rst  pysnt.converters.display.rst  pysnt.converters.enhancement.rst  pysnt.converters.extractors.rst  pysnt.converters.graph_converters.rst  pysnt.converters.rst  pysnt.converters.structured_data_converters.rst  pysnt.converters.tree_converters.rst  pysnt.core.rst  pysnt.display.core.rst  pysnt.display.data_display.rst  pysnt.display.rst  pysnt.display.utils.rst  pysnt.display.visual_display.rst  pysnt.filter.rst  pysnt.gui.cmds.rst  pysnt.gui.rst  pysnt.gui_utils.rst  pysnt.io.image_formats.rst  pysnt.io.images.rst  pysnt.io.rst  pysnt.java_utils.rst  pysnt.rst  pysnt.setup_utils.rst  (+7 more)
docs/notebooks/: 01_single_cell_analysis.ipynb  02_hemisphere_analysis.ipynb  03_convex_hull.ipynb  04_tree_intersection.ipynb  05_napari_viewer.ipynb  06_persistence_landscape.ipynb  07_curvature_optimization.ipynb  1_overview.ipynb  1_single_cell_analysis.ipynb  2_convex_hull.ipynb  3_tree_intersection.ipynb  4_persistence_landscape.ipynb  5_performance_testing.ipynb  5_persistence_landscape.ipynb  6_hemisphere_analysis.ipynb  6_performance_testing.ipynb  7_timelapse_segmentation.ipynb  README.md  ijfinder.py  index.md
docs/pysnt/: allenutils_doc.rst  analysis_methods.rst  bisearch_doc.rst  bisearchnode_doc.rst  boolean_returning_methods.rst  boundingbox_doc.rst  category_analysis.rst  category_getters.rst  category_i_o_operations.rst  category_setters.rst  category_static_methods.rst  category_utilities.rst  category_visualization.rst  colormaps_doc.rst  convexhull3d_doc.rst  convexhullanalyzer_doc.rst  fill_doc.rst  fillconverter_doc.rst  fillerthread_doc.rst  getter_methods.rst  groupedtreestatistics_doc.rst  imgutils_doc.rst  imputils_doc.rst  index.rst  interactivetracercanvas_doc.rst  io_methods.rst  list_returning_methods.rst  method_index_statistics.json  method_search_data.json  mouselightloader_doc.rst  mouselightquerier_doc.rst  multitreecolormapper_doc.rst  multitreestatistics_doc.rst  multiviewer2d_doc.rst  multiviewer3d_doc.rst  neuromorpholoader_doc.rst  nodecolormapper_doc.rst  nodeprofiler_doc.rst  nodestatistics_doc.rst  path_doc.rst  (+33 more)
docs/pysnt/analysis/: convexhull2d_doc.rst  convexhull3d_doc.rst  convexhullanalyzer_doc.rst  groupedtreestatistics_doc.rst  index.rst  multitreecolormapper_doc.rst  multitreestatistics_doc.rst  nodecolormapper_doc.rst  nodeprofiler_doc.rst  nodestatistics_doc.rst  pathprofiler_doc.rst  pathstatistics_doc.rst  pathstraightener_doc.rst  pcanalyzer_doc.rst  persistenceanalyzer_doc.rst  (+8 more)
scripts/: README.md  deploy.py  generate_api_docs.py  generate_placeholders.py  generate_stubs.py  pysnt_utils.py  sync_python_classes.py
src/pysnt/: __init__.py  __init__.pyi  __main__.py  __main__.pyi  _docstring_enhancements.py  _docstring_enhancements.pyi  common_module.py  common_module.pyi  config.py  config.pyi  converters.py  converters.pyi  core.py  core.pyi  gui_utils.py  gui_utils.pyi  java_utils.py  java_utils.pyi  setup_utils.py  setup_utils.pyi
tests/: README.md  test_config.py  test_config_integration.py  test_core.py  test_gui_utils.py  test_inspect.py  test_java_autocompletion.py  test_java_utils.py  test_reflection.py  test_type_stubs.py
(+282 files in other folders)
